Fix extra padding on mobile view, when context nav is hidden

--- a/static/components/layout/_style.scss
+++ b/static/components/layout/_style.scss
@@ -75,7 +75,7 @@ body {
     }
 }
 
-@media (min-width: 400px){
+@media (min-width: 600px){
   .stream__container, .has-context .stream__container {
     width: 100%;
     padding-left:150px;
